# src/config/swagger.json
@@ -331,8 +331,7 @@
             "required": true,
             "schema": {
               "type": "string"
-            },
-            "description": "ID do pet"
+            }
           }
         ],
         "responses": {
@@ -360,8 +359,7 @@
             "required": true,
             "schema": {
               "type": "string"
-            },
-            "description": "ID do pet"
+            }
           }
         ],
         "responses": {
@@ -404,8 +402,7 @@
             "required": true,
             "schema": {
               "type": "string"
-            },
-            "description": "ID do pet"
+            }
           }
         ],
         "responses": {
@@ -417,6 +414,111 @@
           },
           "500": {
             "description": "Erro ao deletar pet"
+          }
+        }
+      }
+    },
+    "/api/reports/": {
+      "post": {
+        "tags": [
+          "Reports"
+        ],
+        "summary": "Cria um novo report e envia para análise",
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Report enviado para análise."
+          },
+          "500": {
+            "description": "Erro ao enviar report."
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "petId",
+                  "userId",
+                  "reportText"
+                ],
+                "properties": {
+                  "petId": {
+                    "type": "string"
+                  },
+                  "userId": {
+                    "type": "string"
+                  },
+                  "reportText": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Reports"
+        ],
+        "summary": "Lista todos os reports",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "Lista de reports."
+          },
+          "500": {
+            "description": "Erro ao buscar reports."
+          }
+        }
+      }
+    },
+    "/api/reports/{id}/status": {
+      "patch": {
+        "tags": [
+          "Reports"
+        ],
+        "summary": "Atualiza o status de um report",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID do report"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Status atualizado."
+          },
+          "500": {
+            "description": "Erro ao atualizar status do report."
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "status"
+                ],
+                "properties": {
+                  "status": {
+                    "type": "string",
+                    "example": "REMOVER"
+                  }
+                }
+              }
+            }
           }
         }
       }
