# src/routes.js
@@ -3,6 +3,7 @@ import { Router } from 'express';
 import UserRouter  from "./routers/userRouter.js";
 import AuthRouter from "./routers/authRouter.js";
 import petRouter from "./routers/petRouter.js";
+import reportRouter from "./routers/reportRouter.js";
 
 import InternalServerError from "./routers/helpers/500.js";
 import NotFound from "./routers/helpers/404.js";
@@ -11,7 +12,7 @@ const routes = Router()
     routes.use('/api/login', AuthRouter);
     routes.use('/api/users', UserRouter);
     routes.use('/api/pets', petRouter);
-    
+    routes.use('/api/reports', reportRouter);
     
     routes.use(InternalServerError);
     routes.use(NotFound);
